Fixing NavBar squish issue - Applied margin to NavBar text to fix spacing on medium screen sizes

--- a/src/containers/ReleasePreview/index.css
+++ b/src/containers/ReleasePreview/index.css
@@ -1,7 +1,6 @@
 .releasePreview {
     margin-left: 0;
     margin-top: 2vh;
-    border: solid red;
   }
 
 .releasePreview img{
